# ccms

./: .gitignore  ASYNC_SESSION_LIST_IMPLEMENTATION.md  CLAUDE.md  CLIPPY_FIXES_SUMMARY.md  COMMIT_MESSAGE.txt  COMPARISON_ANALYSIS.md  Cargo.toml  ENGINE_CONSISTENCY_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  IOCRAFT_REVIEW.md  LAYOUT_IMPROVEMENT_PROPOSAL.md  MIGRATION_REPORT.md  PR_DRAFT.md  README.md  README_WGPU.md  SMOL_BLOCKING_THREADS_OPTIMIZATION.md  SMOL_PERFORMANCE_ANALYSIS.md  TUI_REALM_MIGRATION_REVIEW.md  TUI_TESTING_APPROACHES.md  all_comparison.json  all_comparison.md  auto_optimization.json  baseline.json  benchmark-ascii-opt.json  benchmark-with-mimalloc.json  blocking_threads_comparison.json  blocking_threads_cpu_count.json  buffer_256kb.json  buffer_reuse.json  claude_rayon_comprehensive.txt  claude_smol_comprehensive.txt  comprehensive_engine_benchmark.json  concurrent_200.json  demo_iocraft.sh  engine_comparison.json  filesize_10mb.json  final_comparison.json  fullparse_comparison.json  fullparse_comparison.md  fullparse_opt_vs_rust.json  (+72 more)
.claude/: settings.json
.github/actions/install-rust-tool/: action.yml
.github/workflows/: ci.yml  codspeed.yml
benches/: async_benchmark.rs  component_benchmark.rs  duckdb_comparison.rs  engine_comparison_benchmark.rs  file_discovery_benchmark.rs  file_discovery_comparison.rs  interactive_ui_benchmark.rs  io_vs_cpu_benchmark.rs  large_file_benchmark.rs  parallel_comparison_benchmark.rs  profiled_benchmark.rs  rayon_vs_smol_benchmark.rs  realistic_benchmark.rs  search_benchmark.rs  search_engine_comparison.rs  session_list_benchmark.rs  smol_benchmark.rs
docs/: tui-realm-architecture.md
golang/: .gitignore  BENCHMARK_RESULTS.md  README.md  go.mod  go.sum
golang/cmd/benchmark/: main.go  simple_main.go
golang/cmd/compare_search/: main.go
golang/cmd/debug_search/: main.go
golang/cmd/profile/: main.go
golang/cmd/profile_detailed/: main.go
golang/cmd/search/: main.go
golang/cmd/search_fast/: main.go
golang/cmd/search_final/: main.go
golang/cmd/search_fullparse/: main.go
golang/cmd/search_fullparse_optimized/: main.go
golang/cmd/search_jsonparser_optimized/: main.go
golang/cmd/search_optimized/: main.go
golang/cmd/search_profile/: main.go
golang/cmd/search_simd/: main.go
golang/cmd/search_simdjson/: main.go
golang/cmd/search_simdjson_debug/: main.go
golang/cmd/search_sonic/: main.go
golang/cmd/search_ultra/: main.go
golang/cmd/search_ultra_safe/: main.go
golang/internal/schemas/: session_message.go  simple_message.go
golang/internal/search/: loader.go  search.go  simple_loader.go  simple_search.go
golang/test/: content_test.go  debug_test.go  ultra_test.go
src/: lib.rs  main.rs  profiling.rs  profiling_enhanced.rs
src/convert/: claude_to_codex.rs
src/formatters/: claude_formatter.rs  mod.rs  tool_parser.rs
src/interactive/: mod.rs  tests.rs
src/interactive_iocraft/: IMPLEMENTATION_SUMMARY.md  error.rs  feature_tests.rs  integration_tests.rs  memory_optimization.md  minimal_mod.rs  mod.rs  performance_tests.rs  simple_mod.rs  workflow_tests.rs
src/interactive_iocraft/application/: cache_service.rs  cache_service_test.rs  mod.rs  optimized_cache_service.rs  search_service.rs  search_service_test.rs  session_service.rs  session_service_test.rs  settings_service.rs
src/interactive_iocraft/domain/: filter.rs  filter_test.rs  mod.rs  models.rs  models_test.rs  session_list_item.rs  settings.rs
src/interactive_iocraft/ui/: clipboard.rs  clipboard_operations_test.rs  cursor_management_test.rs  display_size_test.rs  dynamic_size_test.rs  e2e_comprehensive_tests.rs  e2e_tests.rs  keyboard_actions_test.rs  keyboard_navigation_test.rs  mod.rs  multibyte_test.rs  session_viewer_test.rs  text_wrapping_test.rs
src/interactive_r3bl/: app.rs  mod.rs  search_service.rs  state.rs  tests.rs
src/interactive_r3bl/components/: help_view.rs  mod.rs  result_detail_view.rs  search_view.rs  session_view.rs
src/interactive_r3bl_poc/: app.rs  mod.rs  state.rs
src/interactive_r3bl_simple/: app.rs  mod.rs  state.rs  test_app.rs  test_app_ctrl_c.rs  test_ctrl_c.rs  test_highlight.rs  test_japanese.rs  test_layout.rs  test_state.rs  utils.rs
src/interactive_ratatui/: constants.rs  debug.rs  help_mode_rendering_test.rs  help_navigation_test.rs  help_overlay_test.rs  integration_tests.rs  mod.rs  mod_old.rs  mod_old_backup.rs  mod_tuirealm.rs  session_preview_test.rs  session_view_integration_test.rs  test_coverage_report.md  test_summary.md  tests.rs  tests.rs.backup  tuirealm_integration_test.rs
src/interactive_ratatui/application/: cache_service.rs  cache_service_test.rs  mod.rs  search_service.rs  search_service_test.rs  session_service.rs  session_service_test.rs
src/interactive_ratatui/domain/: filter.rs  filter_test.rs  mod.rs  models.rs  models_test.rs  session_list_item.rs
src/interactive_ratatui/tuirealm_v3/: ARCHITECTURE_ISSUES.md  COMPLETION_SUMMARY.md  ERROR_HANDLING_ANALYSIS.md  ERROR_HANDLING_PATTERNS.md  KEYBOARD_SHORTCUTS_IMPROVEMENTS.md  MIGRATION_COMPLETED.md  PERFORMANCE_ANALYSIS.md  TYPE_SAFETY_ANALYSIS.md  app.rs  app_test.rs  e2e_test.rs  edge_case_test.rs  error.rs  error_handling_improvements_test.rs  error_handling_test.rs  feature_test.rs  integration_test.rs  messages.rs  mod.rs  models.rs  payload_example.rs  performance_benchmark.rs  performance_optimizations.rs  state.rs  state_test.rs  type_safe_wrapper.rs  type_safety.rs  type_safety_improvements.rs
src/interactive_ratatui/ui/: app_state.rs  app_state_test.rs  commands.rs  (+5 more)
src/interactive_wgpu/: mod.rs
src/query/: condition.rs  mod.rs  parser.rs  regex_cache.rs
src/schemas/: mod.rs  session_message.rs  tool_result.rs
src/search/: async_engine.rs  duckdb_engine.rs  engine.rs  fast_json_scanner.rs  file_discovery.rs  mmap_reader.rs  mod.rs  optimized_async_engine.rs  optimized_async_engine_v2.rs  optimized_engine.rs  optimized_rayon_engine.rs  optimized_rayon_engine_v2.rs  optimized_smol_engine.rs  rayon_engine.rs  rayon_limited_engine.rs  smol_engine.rs
src/utils/: mod.rs  path_encoding.rs
(+123 files in other folders)
