[package]
name = "ccms"
version = "0.0.1"
edition = "2024"
authors = ["CCMS CLI"]
description = "High-performance CLI for searching Claude session JSONL files"

[[bin]]
name = "ccms"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# JSON parsing with SIMD acceleration
simd-json = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and path handling
globset = "0.4"
walkdir = "2.5"
dirs = "6.0"

# Regex and string matching
regex = "1.10"
lru = "0.16"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"


# Error handling
anyhow = "1.0"

# Date/time handling
chrono = "0.4"
parse_datetime = "0.10"

# Query parsing
nom = "8.0"

# Progress indication
indicatif = "0.18"

# Colored output
colored = "3.0"

# TUI framework
ratatui = "0.29"
crossterm = "0.29"


# Profiling and tracing
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (optional)
tokio = { version = "1.40", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# GPU-accelerated rendering (optional)
ratatui-wgpu = { version = "0.3.1", optional = true }
winit = { version = "0.30", optional = true }
env_logger = { version = "0.11", optional = true }
fontdb = { version = "0.22", optional = true }
futures-lite = { version = "2.5", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "=3.0.4"
tempfile = "=3.20.0"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "component_benchmark"
harness = false

[[bench]]
name = "async_benchmark"
harness = false

[[bench]]
name = "large_file_benchmark"
harness = false

[[bench]]
name = "realistic_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = []
profiling = ["pprof"]
async = ["tokio", "futures"]
wgpu = ["ratatui-wgpu", "winit", "env_logger", "fontdb", "futures-lite"]
