[package]
name = "ccms"
version = "0.0.1"
edition = "2024"
authors = ["CCMS CLI"]
description = "High-performance CLI for searching Claude session JSONL files"

[[bin]]
name = "ccms"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# JSON parsing with SIMD acceleration
simd-json = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and path handling
globset = "0.4"
walkdir = "2.5"
dirs = "6.0"

# Configuration
toml = "0.8"

# Regex and string matching
regex = "1.10"
lru = "0.16"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"


# Error handling
anyhow = "1.0"

# Date/time handling
chrono = "0.4"
parse_datetime = "0.10"

# Query parsing
nom = "8.0"

# Progress indication
indicatif = "0.18"

# Colored output
colored = "3.0"

# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# iocraft TUI framework (alternative)
iocraft = "0.5"
smol = "2.0"
futures = "0.3"

# Clipboard support
arboard = "3.4"


# Profiling and tracing
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (optional)
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
codspeed-criterion-compat = "=3.0.4"
tempfile = "=3.20.0"
smol-macros = "0.1"
macro_rules_attribute = "0.2"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "component_benchmark"
harness = false

[[bench]]
name = "async_benchmark"
harness = false

[[bench]]
name = "large_file_benchmark"
harness = false

[[bench]]
name = "realistic_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = []
profiling = ["pprof"]
async = ["tokio"]
